@@ -153,14 +153,18 @@ class ThumbnailImage extends MediaTransformOutput {
 		$alt = empty( $options['alt'] ) ? '' : $options['alt'];
 		# Note: if title is empty and alt is not, make the title empty, don't
 		# use alt; only use alt if title is not set
-		$title = !isset( $options['title'] ) ? $alt : $options['title'];		
+		$title = !isset( $options['title'] ) ? $alt : $options['title'];
 		$query = empty($options['desc-query'])  ? '' : $options['desc-query'];
 
 		if ( !empty( $options['custom-url-link'] ) ) {
 			$linkAttribs = array( 'href' => $options['custom-url-link'] );
+			if ( $alt ) {
+				$linkAttribs['title'] = $alt;
+			}
 		} elseif ( !empty( $options['custom-title-link'] ) ) {
 			$title = $options['custom-title-link'];
-			$linkAttribs = array( 'href' => $title->getLinkUrl(), 'title' => $title->getFullText() );
+			$linkAttribs = array( 'href' => $title->getLinkUrl(),
+					'title' => empty( $options['alt'] ) ? $title->getFullText() : $alt );
 		} elseif ( !empty( $options['desc-link'] ) ) {
 			$linkAttribs = $this->getDescLinkAttribs( $title, $query );
 		} elseif ( !empty( $options['file-link'] ) ) {
